--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "superagent": "^7.1.2",
     "uuid": "^8.3.2"
   },
+  "scripts": {
+    "start": "node index.js"
+  },
   "devDependencies": {
     "nodemon": "^2.0.15"
   }
